--- a/styles/estilo_duacyd.css
+++ b/styles/estilo_duacyd.css
@@ -3,6 +3,7 @@
     --secondary-color: #0d1321;
     --tertiary-color: #748cab;
     --quaternary-color: #50647f;
+    --important-color: #ffba31;
 }
 
 body {
@@ -16,13 +17,32 @@ header {
     width: 100%;
 }
 
+footer {
+    background-color: var(--quaternary-color) !important;
+    color: white;
+    padding: 1rem;
+    text-align: center;
+}
+
+footer b {
+    color: var(--important-color) !important;
+}
+
+footer iframe {
+    border-radius: 10px;
+}
+
+footer a {
+    color: white !important;
+    text-decoration: none;
+}
+
 /* En pantallas menores a 768px (móviles), quitar el `fixed` */
 @media (max-width: 767px) {
     header {
         position: relative; /* O puedes usar position: relative; */
     }
 }
-
 
 .logo {
     width: 100px;
@@ -42,7 +62,7 @@ header {
 .custom-text-1 {
     position: absolute;
     top: 50%;
-    width: 40% !important;
+    width: 50% !important;
     color: white;
     font-size: 2rem;
     background-color: var(--tertiary-color);
@@ -99,3 +119,36 @@ header {
     color: var(--tertiary-color) !important;
 }
 
+.map-container {
+    background-color: var(--primary-color);
+    padding: 0.4rem;
+    border-radius: 10px;
+}
+
+.socialnetwork-square {
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    padding: 0.4rem;
+    margin: 0.4rem;
+}
+
+.whatsapp {
+    background-color: #25d366;
+    font-size: 2.3rem; 
+}
+
+.facebook {
+    background-color: #3b5998;
+    font-size: 2.2rem; 
+}
+
+.instagram {
+    background: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
+    font-size: 2.5rem;
+}
+
+.gmail {
+    background-color: #dd4b39;
+    font-size: 2rem;
+}
