--- a/styles/estilo_duacyd_preguntas.css
+++ b/styles/estilo_duacyd_preguntas.css
@@ -18,11 +18,30 @@ header {
     width: 100%;
 }
 
+main {
+    padding-top: 9rem;
+}
+
+/* Media query para dispositivos con un ancho máximo de 768px (tabletas y móviles) */
+@media (max-width: 768px) {
+    main {
+        padding-top: 2rem;
+    }
+}
+
+/* Media query para dispositivos con un ancho máximo de 480px (móviles pequeños) */
+@media (max-width: 480px) {
+    main {
+        padding-top: 2rem;
+    }
+}
+
 footer {
     background-color: var(--quaternary-color) !important;
     color: white;
     padding: 1rem;
     text-align: center;
+
 }
 
 footer b {
@@ -174,4 +193,29 @@ footer a {
 .gmail:hover {
     box-shadow: #dd4b39 0px 0px 10px;
     transition: 0.5s;
+}
+
+.h1-container {
+    color: var(--tertiary-color) !important;
+    text-align: center;
+    padding: 1rem;
+}
+ .question-container {
+    background-color: var(--primary-color);
+    padding: 1rem 4rem;
+    border-radius: 10px;
+    margin: 1rem;
+}
+
+.pregunta {
+    color: white;
+    text-align: justify;
+    border-bottom: var(--important-color) 2px solid;
+    padding-bottom: 0.4rem;
+}
+
+.respuesta {
+    color: white;
+    font-size: 1.2rem;
+    text-align: justify;
 }
